# signalQualityEval

./: CMakeLists.txt  README.md
inc/: bandpower.h  detect.h  evaluate.h  filter.h  hammingWindow.h  kurtosis.h  statistics.h
src/: bandpower.cpp  demo.cpp  detect.cpp  evaluate - 副本.cpp  evaluate.cpp  filter.cpp  kurtosis.cpp  statistics.cpp
